[Restyling] Add Twitter Bootstrap CSS.

--- a/static/login.html
+++ b/static/login.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>TransGame</title>
+    <link href='css/bootstrap.css' rel='stylesheet' type='text/css'>
   </head>
 <body>
 <script src="jquery.min.js"></script>
